[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
phf = {version = "0.10.1", features = ["macros"]}

[lib]
name = "common"
path = "src/common/mod.rs"

[[bin]]
name = "chapter1-1"
path = "src/chapter1/part1/main.rs"

[[bin]]
name = "chapter1-2"
path = "src/chapter1/part2/main.rs"

[[bin]]
name = "chapter1-3"
path = "src/chapter1/part3/main.rs"

[[bin]]
name = "chapter1-4"
path = "src/chapter1/part4/main.rs"

[[bin]]
name = "chapter1-5"
path = "src/chapter1/part5/main.rs"
