[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
log = "0.4.17"
env_logger = "0.9.0"
once_cell = "1.16.0"
aes = "0.8.3"
anyhow = "1.0.72"

[lib]
name = "common"
path = "src/common/mod.rs"

[[bin]]
name = "chapter1-1"
path = "src/chapter1/part1/main.rs"

[[bin]]
name = "chapter1-2"
path = "src/chapter1/part2/main.rs"

[[bin]]
name = "chapter1-3"
path = "src/chapter1/part3/main.rs"

[[bin]]
name = "chapter1-4"
path = "src/chapter1/part4/main.rs"

[[bin]]
name = "chapter1-5"
path = "src/chapter1/part5/main.rs"

[[bin]]
name = "chapter1-6"
path = "src/chapter1/part6/main.rs"

[[bin]]
name = "chapter1-7"
path = "src/chapter1/part7/main.rs"

[[bin]]
name = "chapter1-8"
path = "src/chapter1/part8/main.rs"

[[bin]]
name = "chapter2-10"
path = "src/chapter2/part10/main.rs"